--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,20 @@ body {
   background-color: black;
 }
 
-img {
+.center-image {  
+  
+  margin: auto;
+  width: 40%;
+  height: auto;
+  display: block;
+}
+
+/* img {
+  float: right;
   border: solid 5px white;
   margin: auto;
   width: 25%;
-}
+} */
 
 #main_name {
   border: solid 5px white;
