--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,20 @@ body {
   opacity: 0.8;
   background-color: black;
 }
+.top-section {
+  
+  margin: auto;
+  width: 85%;
+  padding: 5px;
+  border: solid 1px rgb(240, 240, 240);  
+  background-color: black;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  box-sizing: border-box;
+}
 .center-image {    
   margin: auto;
-  width: 40%;
+  width: 60%;
   height: auto;
   display: block;
 }
@@ -14,8 +25,8 @@ body {
 }
 #main_name {
   margin-top: 50px;
-  letter-spacing: 10px;
-  font-size: 60px;
+  letter-spacing: 20px;
+  font-size: 70px;
   font-family: fantasy;
   padding: 5px;
   margin: auto;
@@ -26,7 +37,7 @@ body {
 .box1 {
   margin: auto;
   width: 85%;
-  padding: 20px;
+  padding: 10px;
   border: solid 1px rgb(240, 240, 240);
   color: rgb(240, 240, 240);
   background-color: black;
@@ -47,7 +58,7 @@ body {
 .projects {  
   border: solid 1px rgb(240, 240, 240);
   margin: auto;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding: 20px;  
   color: rgb(240, 240, 240);
   text-align: center
