--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,28 @@
 body {
+  
   background-image: url("https://images.unsplash.com/photo-1534841090574-cba2d662b62e?ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80");
   opacity: 0.8;
   background-color: black;
 }
-.top-section {
-  
+.top-section {  
   margin: auto;
   width: 85%;
   padding: 5px;
-  border: solid 1px rgb(240, 240, 240);  
+  border: solid 1px rgb(240, 240, 240); 
+  border-radius: 10px; 
   background-color: black;
   margin-bottom: 10px;
   margin-top: 10px;
   box-sizing: border-box;
 }
+.blockquote-footer {
+  text-align: center;
+  margin-bottom: 10px;
+}
 .center-image {    
   margin: auto;
-  width: 60%;
+  margin-bottom: 20px;  
+  width: 62%;
   height: auto;
   display: block;
 }
@@ -24,9 +30,9 @@ body {
   font-style: italic;
 }
 #main_name {
-  margin-top: 50px;
-  letter-spacing: 20px;
-  font-size: 70px;
+  margin-top: 10px;
+  letter-spacing: 25px;
+  font-size: 65px;
   font-family: fantasy;
   padding: 5px;
   margin: auto;
@@ -39,6 +45,7 @@ body {
   width: 85%;
   padding: 10px;
   border: solid 1px rgb(240, 240, 240);
+  border-radius: 10px;
   color: rgb(240, 240, 240);
   background-color: black;
   margin-bottom: 10px;
@@ -53,7 +60,7 @@ body {
 }
 .column {  
   width: 33%;
-  float: left;
+  float: left;  
 }
 .projects {  
   border: solid 1px rgb(240, 240, 240);
@@ -77,7 +84,6 @@ body {
   font-size: medium;
   text-align: center;  
 } 
-
 a:link {
   color:  rgb(1, 228, 20);
 }
