--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,29 @@ body {
 .projects a {
   font-size: large;
 }
+.project-box {
+  border: solid 1px rgb(240, 240, 240); 
+  border-radius: 10px;
+  /* margin: auto; */
+  padding: 0%;
+  /* margin-top: 2px;
+  margin-right: 2px;
+  margin-bottom: 2px;  
+  margin-left: 2px; */
+  width: 60px;
+  color: rgb(240, 240, 240);
+}
+.project-card {
+  border: solid 1px rgb(240, 240, 240);
+  border-radius: 10px;  
+  background-color: black;
+  box-shadow: 0 4px 4px 0 rgba(255, 254, 254, 0.897);   
+  width: 90%;
+  height: 90%; 
+}
+.project-card:hover {
+  box-shadow: 0 8px 8px 0 rgba(255, 254, 254, 0.897);
+}
 .quote {
   font-size: medium;
   text-align: center;  
